hphp/hack/test/typecheck/reified_generics/funciton_call_missing_reified_generics2.php.exp
File "funciton_call_missing_reified_generics2.php", line 11, characters 16-18:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "hackarray.hhi", line 15, characters 22-24:
Definition is here
File "funciton_call_missing_reified_generics2.php", line 12, characters 12-14:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "hackarray.hhi", line 15, characters 22-24:
Definition is here
File "funciton_call_missing_reified_generics2.php", line 13, characters 11-13:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "hackarray.hhi", line 15, characters 22-24:
Definition is here
